--- a/app/src/main/res/layout/activity_game_start_session.xml
+++ b/app/src/main/res/layout/activity_game_start_session.xml
@@ -7,7 +7,7 @@
     tools:context=".GameStartSessionActivity">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/gamesessionstart_expression_player_name"
+        android:id="@+id/what_to_guest"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -35,6 +35,6 @@
         android:layout_marginStart="20sp"
         android:layout_marginEnd="20sp"
         android:text="Soumettre"
-        app:layout_constraintTop_toBottomOf="@+id/gamesessionstart_expression_player_name" />
+        app:layout_constraintTop_toBottomOf="@+id/what_to_guest" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
