--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -11,6 +11,12 @@
             app:title="@string/settings__theme"
             app:useSimpleSummaryProvider="true" />
 
+        <EditTextPreference
+            app:key="username"
+            app:title="@string/username"
+            app:defaultValue="Incognito"
+            app:useSimpleSummaryProvider="true" />
+
     </PreferenceCategory>
 
     <PreferenceCategory app:title="@string/settings__socket">
